Thu Oct 24 23:51:15 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: better detection of jumps due to vertical
	  asymptotes to avoid drawing the vertical lines

Sun Oct 20 23:44:25 2013  Jiri (George) Lebl <jirka@5z.com>

	* lib/equation_solving/newton.gel: Add HalleysMethod

	* src/geniustests.txt: do testing

	* help/C/genius.xml: Document Halleys method

Wed Oct 16 08:11:49 2013  Jiri (George) Lebl <jirka@5z.com>

	* lib/functions/lambert.gel: slight improvement in speed.

Wed Oct 16 00:33:17 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/symbolic.c: add some derivatives for Bessel functions and
	  for the Lambert W functions
	
	* help/C/genius.xml: document LambertW, LambertWm1, NewtonsMethod,
	  and some other minor improvements

	* lib/equation_solving/newton.gel, lib/functions/elementary.gel:
	  improve help string for the Newton's method functions

	* pixmaps/Makefile.am: pass -t to gtk-update-icon-cache to avoid
	  failing if no theme index file

Tue Oct 15 18:17:58 2013  Jiri (George) Lebl <jirka@5z.com>

	* lib/functions/lambert.gel, lib/equation_solving/newton.gel: Add
	  LambertW, LambertWm1, NewtonsMethod
	
	* src/geniustests.txt: add tests for the above

Tue Oct 08 17:28:57 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.[ch], src/eval.[ch], src/genius.c, src/gnome-genius.c:
	  Improve the PlotCanvasFreeze/Thaw functions, and make sure plot
	  canvas is always thawed after end of execution so that it never
	  simply remains frozen.
	
	* help/C/genius.xml: Document the two functions

Tue Oct 08 16:54:53 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Very simple PlotCanvasFreeze/Thaw functions, need
	  improvement and documentation

Tue Oct 08 16:57:08 2013  Jiri (George) Lebl <jirka@5z.com>

	* configure.in, pixmaps/Makefile.am: Use gtk-update-icon-cache,
	  otherwise it seems icons are sometimes not picked up.

Thu Oct 03 17:15:40 2013  Jiri (George) Lebl <jirka@5z.com>
