@@ -1,3 +1,8 @@
+Fri Oct 25 08:35:40 2013  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: improve logic for jump detection (still not
+	  perfect)
+
 Thu Oct 24 23:51:15 2013  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: better detection of jumps due to vertical
